RESOLVED FIXED209600
[Cocoa] Fix incorrect rebase
https://bugs.webkit.org/show_bug.cgi?id=209600
Summary [Cocoa] Fix incorrect rebase
Per Arne Vollan
Reported 2020-03-26 08:41:41 PDT
A rebase went wrong in <https://bugs.webkit.org/show_bug.cgi?id=203214> and placed the method call to enableRemoteInspectorIfNeeded() in the wrong method. It should be called in WebProcessProxy::didFinishLaunching.
Attachments
Patch (1.72 KB, patch)
2020-03-26 08:44 PDT, Per Arne Vollan
no flags
Radar WebKit Bug Importer
Comment 1 2020-03-26 08:42:02 PDT
Per Arne Vollan
Comment 2 2020-03-26 08:44:34 PDT
Brent Fulgham
Comment 3 2020-03-26 08:55:52 PDT
Comment on attachment 394614 [details] Patch R=me
Per Arne Vollan
Comment 4 2020-03-26 09:10:12 PDT
Comment on attachment 394614 [details] Patch Thanks for reviewing!
EWS
Comment 5 2020-03-26 09:12:54 PDT
Committed r259046: <https://trac.webkit.org/changeset/259046> All reviewed patches have been landed. Closing bug and clearing flags on attachment 394614 [details].
Note You need to log in before you can comment on or make changes to this bug.