[Cocoa] Fix incorrect rebase https://bugs.webkit.org/show_bug.cgi?id=209600

Reviewed by Brent Fulgham.

A rebase went wrong in <https://bugs.webkit.org/show_bug.cgi?id=203214> and placed the method call to
enableRemoteInspectorIfNeeded() in the wrong method. It should be called in WebProcessProxy::didFinishLaunching.

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::mayBecomeUnresponsive):
(WebKit::WebProcessProxy::didFinishLaunching):


Canonical link: https://commits.webkit.org/222524@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259046 268f45cc-cd09-0410-ab3c-d52691b4dbfc